@@ -1,3 +1,10 @@
+2011-11-04  Frank Winklmeier  <fwinkl@cern>
+
+	* tagging PyUtils-00-11-06
+	* A python/scripts/tc_find_tag.py: new acmd to find TC package version
+	* M python/scripts/__init__.py: Register tc_find_tag
+	* M python/AmiLib.py: Add get_version_of_pkg_with_deps function; sort list of (open) release by default
+
 2011-10-28  Sebastien Binet  <sebastien.binet@cern.ch>
 
 	* tagging PyUtils-00-11-05
